manual imporvments